--- a/about.html
+++ b/about.html
@@ -13,6 +13,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About Us — Lecomax</title>
+  
+  <!-- Open Graph / Link Preview Tags -->
+  <meta property="og:title" content="About Us - Lecomax" />
+  <meta property="og:description" content="Learn more about Lecomax, our mission, and our commitment to quality." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -21,9 +28,13 @@
 
   <header class="header">
     <div class="container header__inner">
-      <a class="brand" href="index.html">
-        <img class="brand__logo" src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/logo%20of%20lecomax.png" alt="Lecomax Logo" />
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">About Us</span></span>
+      <a class="brand" href="index.html" aria-label="Lecomax Home">
+         <!-- New Logo Icon -->
+         <svg class="brand__logo" width="34" height="34" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8 8C8 5.79086 9.79086 4 12 4H16C18.2091 4 20 5.79086 20 8V32C20 34.2091 18.2091 36 16 36H12C9.79086 36 8 34.2091 8 32V8Z" fill="#3b82f6"/>
+            <path d="M22 24C22 21.7909 23.7909 20 26 20H32C34.2091 20 36 21.7909 36 24V32C36 34.2091 34.2091 36 32 36H26C23.7909 36 22 34.2091 22 32V24Z" fill="#0f172a"/>
+         </svg>
+        <span class="brand__text"><span class="brand__name">LECOMAX</span><span class="brand__sub">About Us</span></span>
       </a>
     </div>
   </header>
