--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         
         <!-- Hero Statement Section -->
         <div class="hero-statement">
-            <h1 class="hero-statement__title">Graceful & Powerful</h1>
-            <p class="hero-statement__subtitle">Discover the new standard of premium electronics and fashion.</p>
-            <a href="shop.html" class="hero-statement__btn">Explore Collection</a>
+          <h1 class="hero-statement__title" data-i18n="hero_statement_title">Graceful &amp; Powerful</h1>
+          <p class="hero-statement__subtitle" data-i18n="hero_statement_subtitle">Discover the new standard of premium electronics and fashion.</p>
+          <a href="shop.html" class="hero-statement__btn" data-i18n="hero_statement_cta">Explore Collection</a>
         </div>
 
         <!-- Hidden Side Cards to make video full width -->
