--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <path d="M8 8C8 5.79086 9.79086 4 12 4H16C18.2091 4 20 5.79086 20 8V32C20 34.2091 18.2091 36 16 36H12C9.79086 36 8 34.2091 8 32V8Z" fill="#3b82f6"/>
             <path d="M22 24C22 21.7909 23.7909 20 26 20H32C34.2091 20 36 21.7909 36 24V32C36 34.2091 34.2091 36 32 36H26C23.7909 36 22 34.2091 22 32V24Z" fill="#0f172a"/>
          </svg>
-        <span class="brand__text"><span class="brand__name">LECOMAX</span><span class="brand__sub">About Us</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">About Us</span></span>
       </a>
     </div>
   </header>
