--- a/authentication.html
+++ b/authentication.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <!-- Google tag (gtag.js) -->
@@ -12,7 +12,7 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Authentication â€” Lecomax</title>
+  <title>Authentication — Lecomax</title>
   <meta name="theme-color" content="#ffffff" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="styles.css" />
@@ -29,7 +29,7 @@
     <div class="container header__inner">
       <a class="brand" href="index.html">
         
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Authentication</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Authentication</span></span>
       </a>
     </div>
   </header>
@@ -71,5 +71,6 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
 
 
