--- a/careers.html
+++ b/careers.html
@@ -26,7 +26,7 @@
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Careers</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Careers</span></span>
       </a>
     </div>
   </header>
@@ -61,7 +61,7 @@
     <div class="container footer__inner">
       <div class="footBrand">
         <a class="brand brand--foot" href="index.html">
-           <span class="brand__name" style="font-size:1.5rem"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+           <span class="brand__name" style="font-size:1.5rem"><span class="brand__accent">L'</span>ECOMAX</span>
         </a>
         <p class="foot-desc">Elevate your everyday with curated premium essentials.</p>
         <p class="muted copyright">© <span id="year">2026</span> Lecomax. All rights reserved.</p>
@@ -86,3 +86,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
