--- a/help-center-fr.html
+++ b/help-center-fr.html
@@ -33,7 +33,7 @@
       <a class="brand" href="index.html">
         
         <span class="brand__text">
-          <span class="brand__name">Lecomax</span>
+          <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
           <span class="brand__sub">Centre d'aide</span>
         </span>
       </a>
@@ -88,3 +88,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
