--- a/help-center.html
+++ b/help-center.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <!-- Google tag (gtag.js) -->
@@ -12,7 +12,7 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Help Center â€” Lecomax</title>
+  <title>Help Center — Lecomax</title>
   <meta name="theme-color" content="#ffffff" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
       <a class="brand" href="index.html">
         
         <span class="brand__text">
-          <span class="brand__name">Lecomax</span>
+          <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
           <span class="brand__sub">Help Center</span>
         </span>
       </a>
@@ -70,7 +70,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="muted text-center" style="text-align: center;">Â© 2026 Lecomax. All rights reserved.</p>
+      <p class="muted text-center" style="text-align: center;">© 2026 Lecomax. All rights reserved.</p>
     </div>
   </footer>
 <!--Start of Tawk.to Script-->
@@ -88,5 +88,6 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
 
 
