--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <!-- Google tag (gtag.js) -->
@@ -12,7 +12,7 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy Policy â€” Lecomax</title>
+  <title>Privacy Policy — Lecomax</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -23,7 +23,7 @@
     <div class="container header__inner">
       <a class="brand" href="index.html">
         
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Privacy</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Privacy</span></span>
       </a>
     </div>
   </header>
@@ -66,5 +66,6 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
 
 
