--- a/shipping.html
+++ b/shipping.html
@@ -26,7 +26,7 @@
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Shipping</span></span>
+        <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Shipping</span></span>
       </a>
     </div>
   </header>
@@ -77,3 +77,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
