--- a/thank-you.html
+++ b/thank-you.html
@@ -32,7 +32,7 @@
   <header class="header" id="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <span class="brand__name"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+        <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
       </a>
     </div>
   </header>
@@ -74,3 +74,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
