--- a/checkout-fr.html
+++ b/checkout-fr.html
@@ -32,7 +32,7 @@
   <header class="header" id="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <span class="brand__name"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+        <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
       </a>
       <div class="actions">
         <a href="index.html" class="iconbtn" aria-label="Accueil">
