--- a/help-center-ar.html
+++ b/help-center-ar.html
@@ -37,7 +37,7 @@
       <a class="brand" href="index.html">
         
         <span class="brand__text">
-          <span class="brand__name">Lecomax</span>
+          <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
           <span class="brand__sub">مركز المساعدة</span>
         </span>
       </a>
@@ -92,3 +92,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
