--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            <path d="M8 8C8 5.79086 9.79086 4 12 4H16C18.2091 4 20 5.79086 20 8V32C20 34.2091 18.2091 36 16 36H12C9.79086 36 8 34.2091 8 32V8Z" fill="#3b82f6"/>
            <path d="M22 24C22 21.7909 23.7909 20 26 20H32C34.2091 20 36 21.7909 36 24V32C36 34.2091 34.2091 36 32 36H26C23.7909 36 22 34.2091 22 32V24Z" fill="#0f172a"/>
         </svg>
-        <span class="brand__name">LECOMAX</span>
+        <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
       </a>
 
       <!-- Full Width Search Layout -->
@@ -793,7 +793,7 @@
     <div class="container footer__inner">
       <div class="footBrand">
         <a class="brand brand--foot" href="#">
-           <span class="brand__name" style="font-size:1.5rem"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+           <span class="brand__name" style="font-size:1.5rem"><span class="brand__accent">L'</span>ECOMAX</span>
         </a>
         <p class="foot-desc" data-i18n="footer_desc">Elevate your everyday with curated premium essentials. Experience the perfect blend of modern style and uncompromising quality, delivered directly to you.</p>
         <div class="social-links">
