--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Shop — Lecomax</title>
   <meta name="theme-color" content="#0b1220" />
+
+  <!-- Open Graph / Link Preview Tags -->
+  <meta property="og:title" content="Shop Our Collection - Lecomax" />
+  <meta property="og:description" content="Browse our exclusive selection of electronics, fashion, and accessories. Find exactly what you need." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lecomax.com/shop.html" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Shop Our Collection - Lecomax" />
+  <meta name="twitter:description" content="Browse our exclusive selection of electronics, fashion, and accessories." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -64,8 +77,13 @@
   <div id="home-view">
     <header class="header" id="header">
     <div class="container header__inner">
-      <a class="brand" href="index.html">
-        <span class="brand__name"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+      <a class="brand" href="index.html" aria-label="Lecomax Home">
+         <!-- New Logo Icon -->
+         <svg class="brand__logo" width="34" height="34" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8 8C8 5.79086 9.79086 4 12 4H16C18.2091 4 20 5.79086 20 8V32C20 34.2091 18.2091 36 16 36H12C9.79086 36 8 34.2091 8 32V8Z" fill="#3b82f6"/>
+            <path d="M22 24C22 21.7909 23.7909 20 26 20H32C34.2091 20 36 21.7909 36 24V32C36 34.2091 34.2091 36 32 36H26C23.7909 36 22 34.2091 22 32V24Z" fill="#0f172a"/>
+         </svg>
+         <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
       </a>
 
       <!-- Full Width Search Layout -->
@@ -360,16 +378,24 @@
     <div class="container footer__inner">
       <div class="footBrand">
         <a class="brand brand--foot" href="index.html">
-           <span class="brand__name" style="font-size:1.5rem"><span style="color:var(--accent)">L'</span>ECOMAX</span>
+           <span class="brand__name" style="font-size:1.5rem"><span class="brand__accent">L'</span>ECOMAX</span>
         </a>
         <p class="foot-desc">Elevate your everyday with curated premium essentials. Experience the perfect blend of modern style and uncompromising quality, delivered directly to you.</p>
         <div class="social-links">
-           <a href="#" aria-label="Instagram" class="social-btn instagram">
+           <a href="https://www.instagram.com/lecomax.com" target="_blank" aria-label="Instagram" class="social-btn instagram">
              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
            </a>
 
-           <a href="#" aria-label="Facebook" class="social-btn facebook">
-             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+           <a href="https://www.facebook.com/lecomax.com" target="_blank" aria-label="Facebook" class="social-btn facebook">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path></svg>
+           </a>
+
+           <a href="https://www.tiktok.com/@lecomax.com" target="_blank" aria-label="TikTok" class="social-btn tiktok">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"></path></svg>
+           </a>
+
+           <a href="https://x.com/lecomax.com" target="_blank" aria-label="X (Twitter)" class="social-btn x-twitter">
+             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" stroke="none"><path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"></path></svg>
            </a>
         </div>
         <p class="muted copyright">© <span id="year">2026</span> Lecomax. All rights reserved.</p>
@@ -583,3 +609,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
