--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
   <link rel="stylesheet" href="card-enhancements.css" />
   <link rel="stylesheet" href="modal.css" />
   <link rel="stylesheet" href="newsletter.css" />
+  <script>
+    function openTawk() {
+      window._tawkPendingOpen = true;
+
+      function tryOpen() {
+        if (window.Tawk_API && typeof Tawk_API.maximize === "function") {
+          Tawk_API.showWidget();
+          Tawk_API.maximize();
+          window._tawkPendingOpen = false;
+          return true;
+        }
+        return false;
+      }
+
+      if (tryOpen()) {
+        return;
+      }
+
+      var tries = 0;
+      var timer = setInterval(function () {
+        if (tryOpen() || tries >= 20) {
+          clearInterval(timer);
+        }
+        tries += 1;
+      }, 250);
+    }
+  </script>
 </head>
 <body class="page-home">
   
@@ -908,7 +935,7 @@
     </div>
   </aside>
 
-  <div class="tawk-custom-trigger" role="button" onclick="Tawk_API.toggle();" title="Chat with us">
+  <div class="tawk-custom-trigger" role="button" onclick="openTawk();" title="Chat with us">
     <img src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/my%20photo.jfif" alt="Chat with us">
     <span class="live-agent-label" data-i18n="live_agent">Live Agent</span>
   </div>
@@ -1007,10 +1034,19 @@
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 Tawk_API.onLoad = function(){
-    Tawk_API.hideWidget();
+  if (window._tawkFallbackTimer) {
+    clearTimeout(window._tawkFallbackTimer);
+    window._tawkFallbackTimer = null;
+  }
+  Tawk_API.hideWidget();
+  if (window._tawkPendingOpen) {
+    Tawk_API.showWidget();
+    Tawk_API.maximize();
+    window._tawkPendingOpen = false;
+  }
 };
 Tawk_API.onMinimize = function(){
-    Tawk_API.hideWidget();
+  Tawk_API.hideWidget();
 };
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
