--- a/shop.html
+++ b/shop.html
@@ -493,7 +493,7 @@
     </div>
   </aside>
 
-  <div class="tawk-custom-trigger" role="button" onclick="Tawk_API.toggle();" title="Chat with us">
+  <div class="tawk-custom-trigger" role="button" onclick="openTawk();" title="Chat with us">
     <img src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/my%20photo.jfif" alt="Chat with us">
     <span class="live-agent-label" data-i18n="live_agent">Live Agent</span>
   </div>
@@ -591,11 +591,45 @@
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+function openTawk() {
+  window._tawkPendingOpen = true;
+
+  function tryOpen() {
+    if (window.Tawk_API && typeof Tawk_API.maximize === "function") {
+      Tawk_API.showWidget();
+      Tawk_API.maximize();
+      window._tawkPendingOpen = false;
+      return true;
+    }
+    return false;
+  }
+
+  if (tryOpen()) {
+    return;
+  }
+
+  var tries = 0;
+  var timer = setInterval(function () {
+    if (tryOpen() || tries >= 20) {
+      clearInterval(timer);
+    }
+    tries += 1;
+  }, 250);
+}
 Tawk_API.onLoad = function(){
-    Tawk_API.hideWidget();
+  if (window._tawkFallbackTimer) {
+    clearTimeout(window._tawkFallbackTimer);
+    window._tawkFallbackTimer = null;
+  }
+  Tawk_API.hideWidget();
+  if (window._tawkPendingOpen) {
+    Tawk_API.showWidget();
+    Tawk_API.maximize();
+    window._tawkPendingOpen = false;
+  }
 };
 Tawk_API.onMinimize = function(){
-    Tawk_API.hideWidget();
+  Tawk_API.hideWidget();
 };
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
